# TritonDefense

./: README.md  from_site.py  main.py  person_pid_serial.py  pyproject.toml
app_final/: app.yaml
app_final/assets/: index.html
app_final/python/: main.py  model.py  requirements.txt  servo_control.py  video_stream.py
app_final/sketch/: sketch.ino
apps/uno_q_yolo/: README.md  app.yaml
apps/uno_q_yolo/assets/: index.html
apps/uno_q_yolo/python/: main.py  requirements.txt
apps/uno_q_yolo/sketch/: sketch.ino  sketch.yaml
docs/: PROJECT_STORY.md  TRITON_MOBILE_SENTRY_REPORT.md
killerbot/killerbot/: README.md  app.yaml
killerbot/killerbot/python/: main.py
killerbot/killerbot/rc_map/: README.md  app.yaml
killerbot/killerbot/rc_map/python/: main.py
killerbot/killerbot/rc_map/sketch/: sketch.ino  sketch.yaml
killerbot/killerbot/sketch/: sketch.ino
