[project]
name = "tritondefense"
version = "0.1.0"
description = "CCTV on wheels: mobile video surveillance with acoustic sensing on an Elegoo UGV for contested reconnaissance (hackathon)."
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pyserial>=3.5",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.57",
]
